VPC_peering/vpc.tf
//Creates VPC
resource "aws_vpc" "main" { 
  cidr_block = "${var.cidr_block}" 
  tags = "${var.tags}"
}
